adicionando model de users acessando base em mongodb, adicionando novas rotas

--- a/package.json
+++ b/package.json
@@ -18,9 +18,11 @@
   },
   "homepage": "https://github.com/profetaelias/nodejs#readme",
   "dependencies": {
+    "mongoose": "5.7.13",
     "restify": "8.5.0"
   },
   "devDependencies": {
+    "@types/mongoose": "5.5.32",
     "@types/restify": "8.4.2"
   }
 }
