--- a/package.json
+++ b/package.json
@@ -18,11 +18,14 @@
   },
   "homepage": "https://github.com/profetaelias/nodejs#readme",
   "dependencies": {
+    "bcrypt": "3.0.7",
     "mongoose": "5.7.13",
-    "restify": "8.5.0"
+    "restify": "8.5.0",
+    "restify-errors": "8.0.1"
   },
   "devDependencies": {
     "@types/mongoose": "5.5.32",
-    "@types/restify": "8.4.2"
+    "@types/restify": "8.4.2",
+    "@types/restify-errors": "4.3.3"
   }
 }
