--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "API Rest base para projetos futuros",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest"
   },
   "repository": {
     "type": "git",
@@ -13,6 +13,16 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
+  "jest": {
+    "testEnvironment": "node",
+    "transform": {
+      "^.+\\.tsx?$": "ts-jest"
+    }, 
+    "testRegex": "(/__tests__/.*|(\\.|/)(test|spec))\\.(jsx?|tsx?)$",
+    "moduleFileExtensions": [
+      "ts", "tsx", "js", "jsx", "json", "node"
+    ]
+  },
   "bugs": {
     "url": "https://github.com/profetaelias/nodejs/issues"
   },
@@ -24,8 +34,14 @@
     "restify-errors": "8.0.1"
   },
   "devDependencies": {
+    "@types/jest": "22.1.2",
     "@types/mongoose": "5.5.32",
     "@types/restify": "8.4.2",
-    "@types/restify-errors": "4.3.3"
+    "@types/restify-errors": "4.3.3",
+    "@types/supertest": "2.0.4",
+    "jest": "22.4.2",
+    "supertest": "3.0.0",
+    "ts-jest": "22.0.4",
+    "typescript": "2.6.2"
   }
 }
