alterando configuração do jest para centralizar o before e afterall; implementando arquivo de teste para reviews

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "API Rest base para projetos futuros",
   "main": "index.js",
   "scripts": {
-    "test": "jest -u -t='unit'"
+    "test": "ts-node jest.startup.ts -t test"
   },
   "repository": {
     "type": "git",
@@ -14,6 +14,9 @@
   "author": "",
   "license": "ISC",
   "jest": {
+    "globals": {
+      "address": "http://localhost:3001"
+    },
     "testEnvironment": "node",
     "transform": {
       "^.+\\.tsx?$": "ts-jest"
@@ -47,8 +50,10 @@
     "@types/restify-errors": "4.3.3",
     "@types/supertest": "2.0.4",
     "jest": "22.4.2",
+    "jest-cli": "22.4.2",
     "supertest": "3.0.0",
     "ts-jest": "22.0.4",
+    "ts-node": "5.0.1",
     "typescript": "2.6.2"
   }
 }
