--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
   "dependencies": {
     "@types/yargs": "^13.0.3",
     "bcrypt": "^3.0.7",
+    "jsonwebtoken": "8.1.1",
     "mongoose": "5.7.13",
     "restify": "8.5.0",
     "restify-errors": "8.0.1",
@@ -45,6 +46,7 @@
   },
   "devDependencies": {
     "@types/jest": "22.1.2",
+    "@types/jsonwebtoken": "7.2.5",
     "@types/mongoose": "5.5.32",
     "@types/restify": "8.4.2",
     "@types/restify-errors": "4.3.3",
